orchestrate Basket.API microservices with Docker-compose

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   catalogdb:
     image: postgres
 
-  baketdb:
+  basketdb:
     image: postgres
 
   distributedcache:
@@ -16,6 +16,13 @@ services:
       context: .
       dockerfile: Services/Catalog/Catalog.API/Dockerfile
 
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: Services/Basket/Basket.API/Dockerfile
+
 volumes:
   postgres_catalog:
-  postgres_baket:
+  postgres_basket:
+
